fix: header white space

--- a/style.scss
+++ b/style.scss
@@ -283,7 +283,7 @@ body section.container div.blogbg {
       }
     }
     section.container {
-      margin-top: 71px;
+      margin-top: 60px;
     }
   }
 }
